# tvim

./: .gitignore  16  4  CLAUDE.md  colors.md  init.lua  lazy-lock.json
colors/: tbfox.lua
docs/: README.md  roslyn-setup.md
local-plugins/linear.nvim/: IMPLEMENTATION.md  PHASE0_COMPLETE.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  QUERIES.md  README.md  SETUP_GUIDE.md  test_phase1.lua  test_phase2.lua
local-plugins/scriptures.nvim/: NAVIGATION_PLAN.md  README.md  test.lua
local-plugins/time_track.nvim/tree-sitter/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
local-plugins/time_track.nvim/tree-sitter/bindings/c/: tree-sitter-time-track.pc.in
local-plugins/time_track.nvim/tree-sitter/bindings/c/tree_sitter/: tree-sitter-time-track.h
local-plugins/time_track.nvim/tree-sitter/bindings/go/: binding.go  binding_test.go
local-plugins/time_track.nvim/tree-sitter/bindings/node/: binding.cc  index.js
local-plugins/time_track.nvim/tree-sitter/bindings/python/tests/: test_binding.py
local-plugins/time_track.nvim/tree-sitter/bindings/python/tree_sitter_time_track/: __init__.py  binding.c
local-plugins/time_track.nvim/tree-sitter/bindings/rust/: build.rs  lib.rs
local-plugins/time_track.nvim/tree-sitter/bindings/swift/TreeSitterTimeTrackTests/: TreeSitterTimeTrackTests.swift
local-plugins/time_track.nvim/tree-sitter/corpus/: simple.txt
local-plugins/time_track.nvim/tree-sitter/src/: grammar.json  node-types.json  parser.c
lua/: commands.lua  keymaps.lua  settings.lua  style.lua
lua/config/: commands.lua  highlight-commands.lua  keymaps.lua  lazy.lua  (+3 more)
spell/: en.utf-8.add  en.utf-8.add.spl
(+339 files in other folders)
